// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnimalList should highlight the active animal 1`] = `
<div
  className="col-12 animal-list-container"
>
  <ul
    className="nav nav-pills flex-column"
  >
    <li>
      <Link
        className="nav-link"
        replace={false}
        to="/new"
      >
        + Add a new animal
      </Link>
    </li>
    <li
      className="nav-item"
      key="animal1"
    >
      <Link
        className="nav-link "
        replace={false}
        to={
          Object {
            "pathname": "/animal/undefined",
            "state": Object {
              "activeAnimalId": undefined,
            },
          }
        }
      >
        animal1
      </Link>
    </li>
    <li
      className="nav-item"
      key="animal2"
    >
      <Link
        className="nav-link "
        replace={false}
        to={
          Object {
            "pathname": "/animal/undefined",
            "state": Object {
              "activeAnimalId": undefined,
            },
          }
        }
      >
        animal2
      </Link>
    </li>
    <li
      className="nav-item"
      key="animal3"
    >
      <Link
        className="nav-link "
        replace={false}
        to={
          Object {
            "pathname": "/animal/undefined",
            "state": Object {
              "activeAnimalId": undefined,
            },
          }
        }
      >
        animal3
      </Link>
    </li>
  </ul>
</div>
`;

exports[`AnimalList should render properly with sorted animal names 1`] = `
<div
  className="col-12 animal-list-container"
>
  <ul
    className="nav nav-pills flex-column"
  >
    <li>
      <Link
        className="nav-link"
        replace={false}
        to="/new"
      >
        + Add a new animal
      </Link>
    </li>
    <li
      className="nav-item"
      key="animal1"
    >
      <Link
        className="nav-link active"
        replace={false}
        to={
          Object {
            "pathname": "/animal/undefined",
            "state": Object {
              "activeAnimalId": undefined,
            },
          }
        }
      >
        animal1
      </Link>
    </li>
    <li
      className="nav-item"
      key="animal2"
    >
      <Link
        className="nav-link active"
        replace={false}
        to={
          Object {
            "pathname": "/animal/undefined",
            "state": Object {
              "activeAnimalId": undefined,
            },
          }
        }
      >
        animal2
      </Link>
    </li>
    <li
      className="nav-item"
      key="animal3"
    >
      <Link
        className="nav-link active"
        replace={false}
        to={
          Object {
            "pathname": "/animal/undefined",
            "state": Object {
              "activeAnimalId": undefined,
            },
          }
        }
      >
        animal3
      </Link>
    </li>
  </ul>
</div>
`;
